# ai-email-drafter

./: .gitignore  README.md  config.example.toml  context.example.md  pyproject.toml
deploy/: ai-drafter.service  install.sh
docs/: CASE_STUDY.md  MEGALENS_WORKFLOW.md  REDDIT_POST_READY.md  REDDIT_R_MEGALENS_POST.md  SAFETY_MODEL.md  VIDEO_POST.md
src/ai_drafter/: __init__.py  config.py  context.py  filter.py  gmail.py  llm.py  log.py  pipeline.py  poller.py  service.py  state.py
tests/: test_adversarial.py  test_config.py  test_context.py  test_e2e.py  test_filter.py  test_gmail.py  test_llm.py  test_logging.py  test_pipeline.py  test_poller.py  test_service.py  test_state.py
