[project]
name = "ai-drafter"
version = "0.1.0"
description = "Self-hosted AI email drafter — polls Gmail, drafts replies from context.md"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "cryptography>=42.0",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "google-auth>=2.25",
]

[project.scripts]
ai-drafter = "ai_drafter.service:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_drafter"]
